testsuite/positive/bug-1143.n
using System.Console;

module Program {

  Main() : void {
    def x = $['a'..'f'];
    def y = ['a', 'b', 'c', 'd', 'e', 'f'];
    WriteLine(x == y);
  }

}

/*
BEGIN-OUTPUT
True
END-OUTPUT
*/